kubernetes/apps/downloads/qbittorrent/mousehole-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mousehole
spec:
  # Same pod as qbittorrent/gluetun.
  selector:
    app: qbittorrent
  ports:
    - port: 5010
      targetPort: mousehole
      name: http
