kubernetes/apps/downloads/qbittorrent/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qbit.${DOMAIN}`)
      kind: Rule
      services:
        - name: qbittorrent
          port: 8080
  tls: {}
