kubernetes/apps/downloads/qbittorrent/mousehole-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mousehole
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mousehole.${DOMAIN}`)
      kind: Rule
      services:
        - name: mousehole
          port: 5010
  tls: {}
